Bugfix: Make expander be horizontally aligned with global progressbar
This is weird, because we already had picked evernote/pootle@8a9bdacc.

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -2096,18 +2096,20 @@ html[dir="rtl"] .overview-description-toggle
     display: inline-block;
     position: absolute;
     top: -4px;
-    left: -1px;
+    left: -11px;
     z-index: 1;
 }
 
 #progressbar
 {
     margin-left: 10px;
+    position: relative;
 }
 
 #progressbar table.graph
 {
     width: 100%;
+    position: relative;
 }
 
 .path-summary-more
@@ -2167,6 +2169,7 @@ html[dir="rtl"] .overview-description-toggle
 {
     display: inline-block;
     margin-left: 2em;
+    margin-right: -0.5em;
     font-weight: bold;
 }
 
@@ -2178,7 +2181,6 @@ body.js-not-loaded #translate-actions li
 #translate-actions .counter
 {
     padding: 0.1em 0.9em;
-    margin-right: -0.5em;
     border-radius: 1em;
     background: #000;
     color: #fff;
